--- a/nodeblue/pom.xml
+++ b/nodeblue/pom.xml
@@ -66,6 +66,17 @@
             <version>1.2.9.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.14.1</version>
+        </dependency>
 
 
         </dependencies>
