--- a/nodeblue/pom.xml
+++ b/nodeblue/pom.xml
@@ -90,6 +90,21 @@
         <scope>test</scope>
     </dependency>
 
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>5.14.2</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>6.2.0</version>
+        <scope>test</scope>
+    </dependency>
+
+
 
         </dependencies>
 </project>
