--- a/nodeblue/pom.xml
+++ b/nodeblue/pom.xml
@@ -9,10 +9,6 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <!-- 프로젝트 인코딩을 명시적으로 설정 -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <!-- 자바 소스 및 타겟 버전 설정 -->
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
@@ -32,46 +28,43 @@
         </repository>
     </repositories>
 
+
     <dependencies>
-        <!-- Modbus4j -->
+        <!-- https://mvnrepository.com/artifact/com.infiniteautomation/modbus4j -->
         <dependency>
             <groupId>com.infiniteautomation</groupId>
             <artifactId>modbus4j</artifactId>
             <version>3.1.0</version>
         </dependency>
-
-        <!-- Jackson Dependencies -->
+        <!-- Jackson Databind for object mapping -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.0</version>
         </dependency>
+        <!-- Jackson Core for lower-level JSON functionality -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.15.0</version>
         </dependency>
+        <!-- Jackson Annotations for custom serialization/deserialization -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.15.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.15.2</version>
+            <version>2.15.2</version> <!-- 최신 버전으로 수정 가능 -->
         </dependency>
-
         <!-- SLF4J Logger API -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.9</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.4.11</version>
         </dependency>
 
         <!-- Lombok -->
@@ -81,15 +74,20 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- MQTT -->
+        <!-- Logback (SLF4J Implementation) -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.11</version>
+        </dependency>
+        <!-- MQTT-->
         <dependency>
             <groupId>org.eclipse.paho</groupId>
             <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
             <version>1.2.5</version>
         </dependency>
-
-        <!-- JUnit for Testing -->
+        <!--TEST
+        Code-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -103,34 +101,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <!-- Maven Compiler Plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>ALL-MODULE-PATH</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-
-            <!-- Maven Surefire Plugin (JUnit 실행) -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
