--- a/nodeblue/.vscode/settings.json
+++ b/nodeblue/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "java.debug.settings.onBuildFailureProceed": true,
+    "java.configuration.updateBuildConfiguration": "interactive",
+    "java.search.scope": "all",
+    "java.debug.settings.onBuildFailureProceed": true
 }
